# blaenk.github.io

./: .agignore  .gitattributes  .gitignore  404.html  CNAME  Setup.hs  atom.xml  blaenk.cabal  index.html  readme.markdown  rss.xml  site.hs  stack.yaml
about/: index.html
binary/: index.html
css/: screen.css
hakyll/: site.hs
hakyll/Site/: PandocCompiler.hs  ShellFilter.hs
js/: blaenk.js
lately/: index.html
notes/: index.html
notes/algorithms/: index.html
notes/angular/: index.html
notes/clojure/: index.html
notes/clojure-web-development/: index.html
notes/cmake/: index.html
notes/computer-architecture/: index.html
notes/cpp/: index.html
notes/cryptography/: index.html
notes/diecast/: index.html
notes/erlang/: index.html
notes/ffmpeg/: index.html
notes/game-development/: index.html
notes/gdb/: index.html
notes/git/: index.html
notes/go/: index.html
notes/haskell/: index.html
notes/java/: index.html
notes/linux/: index.html
notes/lua/: index.html
notes/machine-learning/: index.html
notes/networking/: index.html
notes/objective-c/: index.html
notes/play/: index.html
notes/posix-directories-and-links/: index.html
notes/react/: index.html
notes/redis/: index.html
notes/rust/: index.html
notes/scala/: index.html
notes/statistics/: index.html
notes/swift/: index.html
pages/: about.markdown  lately.markdown  uses-this.markdown  work.markdown
posts/: 2013-01-04-naive-convolution-in-haskell.markdown  commit-tag-for-jekyll.markdown  im-back.markdown  learning-the-ffmpeg-libraries.markdown  naive-convolution-in-haskell.markdown  posix-directories-and-links.markdown  terminal-customization.markdown  test-post.markdown  xmonad-ignores-bindings.markdown
posts/a-simpler-vim-statusline/: index.html
posts/custom-xkb-options-with-gnome/: index.html
posts/dots/: index.html
posts/drafts-in-hakyll/: index.html
posts/extra-dependencies-in-hakyll/: index.html
posts/im-back/: index.html
posts/live-editing-with-hakyll/: index.html
posts/naive-convolution-in-haskell/: index.html
posts/post-feed-in-hakyll/: index.html
posts/terminal-customization/: index.html
posts/test-post/: index.html
posts/the-switch-to-hakyll/: index.html
posts/xmonad-ignores-bindings/: index.html
provider/: CNAME
provider/drafts/: algorithms-refresher.markdown
provider/js/: blaenk.js
provider/notes/: algorithms.markdown  angular.markdown  clojure-web-development.markdown  clojure.markdown  cmake.markdown  cpp.markdown  diecast.markdown  digital-signal-processing.markdown  erlang.markdown  ffmpeg.markdown  game-development.markdown  gdb.markdown  go.markdown  haskell.markdown  java.markdown  learning-the-ffmpeg-libraries.markdown  lua.markdown  machine-learning-theory.markdown  machine-learning.markdown  play.markdown  posix-directories-and-links.markdown  react.markdown  redis.markdown  rust.markdown  scala.markdown  statistics.markdown  swift.markdown
provider/pages/: about.markdown  binary.markdown  lately.markdown  reads.markdown  uses-this.markdown  work.markdown
provider/posts/: a-simpler-vim-statusline.markdown  commit-tag-for-jekyll.markdown  custom-xkb-options-with-gnome.markdown  dots.markdown  drafts-in-hakyll.markdown  extra-dependencies-in-hakyll.markdown  im-back.markdown  learning-the-ffmpeg-libraries.markdown  live-editing-with-hakyll.markdown  naive-convolution-in-haskell.markdown  posix-directories-and-links.markdown  post-feed-in-hakyll.markdown  terminal-customization.markdown  test-post.markdown  the-switch-to-hakyll.markdown  xmonad-ignores-bindings.markdown
provider/scss/: _archive.scss  _article.scss  _base.scss  _custom.scss  _footer.scss  _header.scss  _parts.scss  _syntax.scss  screen.scss
provider/templates/: archive.html  comments-js.html  comments.html  footer.html  header.html  (+8 more)
reads/: index.html
scss/: _parts.scss
src/: Main.hs  Site.hs  deploy.sh  pig.py  site.hs
templates/: 404.html  archive-post.html  comments-js.html  default.html  index-post.html  index.html  layout.html  post.html  tags.html
uses-this/: index.html
work/: index.html
(+77 files in other folders)
