name:             blaenk
version:          1.0
synopsis:         Personal Site
homepage:         http://blaenkdenum.com
license:          BSD3
author:           Jorge Israel Peña
maintainer:       jorge.israel.p@gmail.com
category:         Web
build-type:       Simple
cabal-version:    >=1.8

executable site
  main-is:        Site.hs
  hs-source-dirs: src/
  ghc-options:    -O2 -Wall -threaded -o site
  build-depends:  base,
                  process      >= 1.1.0.2,
                  old-locale   >= 1.0.0.4,
                  time         >= 1.4,
                  blaze-html   >= 0.6.1.1,
                  containers   >= 0.4.2.1,
                  regex-tdfa   >= 1.1.8,
                  regex-compat-tdfa >= 0.95.1.4,
                  pandoc       >= 1.12,
                  pandoc-types >= 1.12,
                  filepath     >= 1.3.0.0,
                  bytestring   >= 0.9.2.1,
                  hakyll       >= 4.2.2.0,
                  websockets   >= 0.8.1.1,
                  stm          >= 2.4.2,
                  transformers >= 0.3.0.0,
                  utf8-string  >= 0.3.7,
                  io-streams   >= 1.1.2.2,
                  text         >= 0.11.3.1
