name:             blaenk
version:          1.0
synopsis:         Personal Site
homepage:         http://blaenkdenum.com
license:          BSD3
author:           Jorge Israel Peña
maintainer:       jorge.israel.p@gmail.com
category:         Web
build-type:       Custom
cabal-version:    >=1.8

executable site
  hs-source-dirs: src/
  main-is:        Site.hs
  other-modules:  Site.Compilers
                  Site.Contexts
                  Site.Pandoc
                  Site.Pygments
                  Site.Routes
                  Site.TableOfContents
                  Site.Types
                  Site.WebSockets
  ghc-options:    -O2 -Wall -threaded
  build-depends:  base,
                  process      >= 1.1.0.2  && < 2,
                  old-locale   >= 1.0.0.4  && < 2,
                  time         >= 1.4      && < 2,
                  blaze-html   >= 0.6.1.1  && < 1,
                  containers   >= 0.4.2.1  && < 1,
                  regex-tdfa   >= 1.1.8    && < 2,
                  regex-compat-tdfa >= 0.95.1.4 && < 1,
                  pandoc       >= 1.12     && < 2,
                  pandoc-types >= 1.12     && < 2,
                  filepath     >= 1.3.0.0  && < 2,
                  bytestring   >= 0.9.2.1  && < 10,
                  hakyll       >= 4.4.3.2  && < 5,
                  websockets   >= 0.8.1.1  && < 0.10,
                  stm          >= 2.4.2    && < 3,
                  transformers >= 0.3.0.0  && < 0.5,
                  utf8-string  >= 0.3.7    && < 1.2,
                  io-streams   >= 1.1.2.2  && < 1.4,
                  text         >= 0.11.3.1 && < 2,
                  time-locale-compat

